Issue #2038 Change registry code to use GenericRegistry, use Spring 3 embedded DB feature in tests
Change-Id: Ie9e0a4fa4fb457f1d85326c6c2ddcfa16cdc5b63

Former-commit-id: 57b3706e5d6cc5a5e40db080dc74415f908228b6 [formerly d81592b575e97bc5d4f827339869d93a8c04448c] [formerly d47da65262da072a65c3fe5f734f2716f59063d2] [formerly bc830e67f028c9550c9e3088331979d37dd32fb3 [formerly d47da65262da072a65c3fe5f734f2716f59063d2 [formerly 121d9a02acfe528c524788a062c2d2034f80afe5]]]
Former-commit-id: bc830e67f028c9550c9e3088331979d37dd32fb3
Former-commit-id: ec9fba7ab73ee52c73b56514e1ac66a6a8b5586e [formerly 0b710bc166b21323223984f1acc8bdf1beaea66f]
Former-commit-id: cd1db53a35326f43ab807ecc787ef7b3ecd212ec